[tool.poetry]
name = "pytest-playground"
version = "0.1.0"
description = ""
authors = ["Eugene Park <eugene.park@nutanix.com>"]
readme = "README.md"
packages = [{include = "pytest_playground"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
